# fknc-adb-helper

./: .gitignore  README.md  anr_watchdog.py  detect_item.py  main.py  ocr.py  opencv_match.py  preprocess.py  pyproject.toml  test_amount.py  test_amount_bug.py  test_existing.py  test_moon_std.py  test_seeds.py  test_weather.py  test_weather_detect.py  test_weather_match.py  watchdog.py
src/fknc_adb_helper/: __init__.py  __main__.py  adb_utils.py  bezier.py  bot.py  config.py  detect_item.py  matching.py  ocr.py  utils.py
src/fknc_adb_helper/constant/: __init__.py
tools/: save_pic.py  save_weather.py
